--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,7 +9,9 @@
 }
 
 body {
-  margin: 0;
+  min-inline-size: 375px;
+  max-inline-size: 700px;
+  margin: 0 auto;
 }
 
 h1,
@@ -35,6 +37,8 @@ input {
   color: currentColor;
   font-family: inherit;
   font-size: inherit;
+  background-color: none;
+  border: none;
 }
 
 ul,
