--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,7 +1,7 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
 :root {
-  --Inter: Inter-Variable;
-  --PressStart2P: PressStart2P;
+  --main-font: Inter-Variable;
+  --accent-font: PressStart2P;
   --titleFontSize: 18px;
   --titleFontWeight: 700;
   --textFontSize: 18px;
