--- a/styles/style.css
+++ b/styles/style.css
@@ -120,8 +120,7 @@
   padding: 3px 10px;
   font-variation-settings: 'wght' var(--titleFontWeight);
   font-size: var(--titleFontSize);
-  line-height: 100%;
-  padding: 3px 10px;
+  line-height: 23px;
   min-block-size: 33px;
   display: flex;
   align-items: center;
@@ -138,7 +137,6 @@
   block-size: clamp(23.188rem, 8.679rem + 38.69vw, 43.5rem);
   object-fit: cover;
   object-position: right;
-  
 }
 
 .image-label {
